fixed spacing layout issue on view listing page

--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -96,6 +96,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  width: 100%;
   &:after {
     display: block;
     content: "";
